--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,12 +38,13 @@ log = "0.4"
 natord = "1.0.7"
 num_cpus = "1.3.0"
 number_prefix = "0.2.3"
-scoped_threadpool = "0.1.*"
+rayon = "1.0"
 term_grid = "0.1.6"
 term_size = "0.3.0"
 unicode-width = "0.1.4"
 users = "0.8"
 zoneinfo_compiled = "0.4.7"
+inlinable_string = "0.1"
 
 [build-dependencies]
 datetime = "0.4.7"
@@ -54,7 +55,7 @@ git = [ "git2" ]
 
 [profile.release]
 opt-level = 3
-debug = false
+debug = 1
 lto = true
 panic = "abort"
 
